RESOLVED FIXED220856
TransformationMatrix::Recompose() and Decompose() incorrectly transpose rotation
https://bugs.webkit.org/show_bug.cgi?id=220856
Summary TransformationMatrix::Recompose() and Decompose() incorrectly transpose rotation
Imanol Fernandez
Reported 2021-01-22 03:05:45 PST
The computation of quaternions during matrix decomposition looks like it's based off of the matrix transpose. The matrix data is actually column major order but the quaternion operations seem to assume row major order. More info in the equivalent chromium bug: https://bugs.chromium.org/p/chromium/issues/detail?id=929841
Attachments
Radar WebKit Bug Importer
Comment 1 2021-01-29 03:06:11 PST
Matt Woodrow
Comment 2 2023-08-28 18:03:58 PDT
EWS
Comment 3 2023-08-29 14:45:25 PDT
Committed 267424@main (a959acf1111c): <https://commits.webkit.org/267424@main> Reviewed commits have been landed. Closing PR #17162 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.